src/test/ui/parser/issue-14303-impl.stderr
error: lifetime parameters must be declared prior to type parameters
  --> $DIR/issue-14303-impl.rs:3:13
   |
LL | impl<'a, T, 'b> X<T> {}
   |     --------^^- help: reorder the parameters: `<'a, 'b, T>`
   |
   = note: the expected order for parameters is: lifetimes, then types, then consts

error: aborting due to previous error

